<resources>
    <string name="app_name">assign_001</string>
    <string name="Tiel">LOG IN</string>
    <string name="UserName">UserName</string>
    <string name="btConcel">Cencel</string>
    <string name="btlogin">Login</string>
    <string name="To">To</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="btCencell">Cencel</string>
    <string name="btSendObject">Send Mail</string>
    <string name="hello_blank_fragment">hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
